Version 1.1
  Configuration of:
    Open databases from file managers without question  
  
Working on:
  Executing scripts, open scripts in "editor / runner", saving scripts  
  Planning for further development, feature request welcome, could be:
	Sort data / query results by clicking on title
	Data editing form use editing button at each row
	Data entry - add post from option menu in table browser
	Implement some of SQLites .commands (.dump, .read fn.ft, ...)

Version 1.1β
  Select SQL history from query form
  Size of icons changed to right sizes for different displays
  Better detection of valid SQLite databases (based on first 16-byte sequence)
  Begin transaction, Commit and Rollback can be selected from option menu. 
    Transactions can be nested as savepoints in SQLite (is the first transaction
    rolled back all updates are rolled back). aSQLiteManager ensures that SQL
    statements are stored in the database even if updates are rolled back.
    See http://www.sqlite.org/lang_savepoint.html for savepoint specifications.
  Export of databases (table structure, views and data) to SQL script
    named databaseFileName.sql implemented -- seems to work
  Restore of databases (table structure, views and data) from SQL script
    named databaseFileName.sql implemented -- seems to work
  Better file picker with different icons for folders, .sqlite, .db and non
  	aSQLiteManager files
  Export of query result to ascii file databaseFileName.export
  
Version 1.0
  First production release of aSQLiteManager
  No known bugs
  
Version 0.81
  aSQLiteManager can be opened if a .sqlite or .db file is clicked on in
    OI File Manager, in Adao Teams File Manager and in Simplest File Manager
  Insert into SQL builder mode
  A few bug fixed

Version 0.80
  The first beta version of aSQLiteManager
  More advanced SQL builder (for Select, Create view, Create table, Drop table,
    Drop view and Delete from)